[project]
name = "diplom-secure-agent"
version = "0.1.0"
description = "Secure RAG agent prototype (FastAPI + LangGraph + pgvector)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.4.2",
    "langgraph>=1.0.6",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "pypdf>=6.6.0",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
local = [
    # Вариант 1: Ollama (локально)
    "langchain-community>=0.2.0",
    # Вариант 2: sentence-transformers для локальных эмбеддингов
    "sentence-transformers>=3.0.0",
]

dev = [
    "ruff>=0.6.0",
    "pytest>=8.2",
]
